crates/djls-python/tests/snapshots/corpus__repos__djangopackages.org__homepage__templatetags__psa_tag.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "homepage.templatetags.psa_tag::tag::psa":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: keep
filter_arities: {}
block_specs: {}
